all functionality done

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <title>Battleship</title>
 </head>
 <body>
-
+<div class="container">
+  <div class="player"></div>
+  <br>
+  <div class="bot"></div>
+</div>
 </body>
 </html>
