--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <title>Battleship</title>
 </head>
 <body>
+<header>
+  <h2 class="heading">Battleship 🔫</h2>
+  <h4 class="tag">↙ Hit enemy ships</h4>
+</header>
 <div class="container">
   <div class="player"></div>
   <br>
